# review

./: .gitignore  .review.md  .review.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  brokkr.toml
docs/: spec.md
prompts/: arch.md  bugs.md  default.md  perf.md  prefix.md  prime_suffix.md  security.md
src/: audit.rs  cli.rs  config.rs  config_write.rs  input.rs  lock.rs  main.rs  prime.rs  prompt.rs  provider.rs  session.rs  sessions.rs  transcript.rs
