[package]
name = "review"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
toml = "0.8"
gethostname = "0.5"
which = "7"

[lints.clippy]
# Style: modern idiomatic Rust
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"

# Safety: strict error handling
unwrap_in_result = "deny"
ok_expect = "deny"
unwrap_used = "deny"

# Async safety
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"

# Type safety
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"

# Safety: no debug/placeholder code in production
dbg_macro = "deny"
todo = "deny"
